# krace

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md
docker/base/: Dockerfile
kernel/: ktsan.patch  racer.patch
kernel/initramfs/: CMakeLists.txt  common.h  dart.c  fuzzer.inc  init.c  log.c  shared.inc  strace.c  strace.h  util.c
kernel/initramfs/prog-cont/: main.c
kernel/initramfs/prog-fuzz/: main.c
kernel/initramfs/prog-prep/: main.c
kernel/initramfs/prog-test/: ltp.h  ltp_common.h  ltp_output.c  ltp_output.h  ltp_safe_op_file.c  ltp_safe_op_file.h  ltp_safe_op_user.c  ltp_safe_op_user.h  main.c
kernel/spec/: CMakeLists.txt  codegen.py  common.h  main.cpp  type_int.h
pass/: CMakeCache.txt  CMakeLists.txt  codegen.py
pass/dart/: Makefile  apidef.inc  dart.h  dart_common.h  dart_ctrl.c  dart_ctrl.h  dart_hash.h  dart_kernel.h  dart_log.c  dart_log.h  dart_ptid.h  dart_wks.c  dart_wks.h  rt_async.inc  rt_cov.inc  rt_ctxt.inc  rt_event.inc  rt_exec.inc  rt_mark.inc  rt_mem_access.inc  rt_mem_heap.inc  rt_mem_percpu.inc  rt_mem_stack.inc  rt_order.inc  rt_sync.inc  rt_sys.inc  runtime.c  vardef.h
pass/instrument/: CMakeLists.txt  Main.cpp
pass/instrument/include/analysis/: Oracle.h  Probe.h
pass/instrument/include/base/: Common.h  Plugin.h
pass/instrument/include/dart/: API.h
pass/instrument/include/util/: Logger.h  Lower.h
pass/instrument/lib/analysis/: Oracle.cpp  Probe.cpp
pass/instrument/lib/base/: Plugin.cpp
pass/instrument/lib/dart/: API.cpp
pass/instrument/lib/util/: Logger.cpp  Lower.cpp
pass/profile/: linux.json
script/: .gitignore  admin.py  build.mk  build.py  cmd.py  cmd_cc.py  config.py  config_option.py  dart.py  dart_app.py  dart_viz.py  dart_viz_depth.json  docker.mk  docker.py  emu.py  exec.mk  exec.py  fs.py  fs_btrfs.py  fs_ext4.py  fs_xfs.py  fuzz.mk  fuzz.py  fuzz_check.py  fuzz_engine.py  fuzz_exec.py  fuzz_primitive.py  fuzz_probe.py  fuzz_report.py  fuzz_stat.py  lint.ini  pkg.py  pkg_binutils.py  pkg_btrfsprogs.py  pkg_e2fsprogs.py  pkg_gcc.py  pkg_initramfs.py  pkg_linux.py  pkg_llvm.py  pkg_musl.py  (+28 more)
